Fix bugs in ContentSuggestions

When the fake omnibox was pinned to top on landscape, it did not take
the full screen width.
This CL fixes it by removing the padding on the inset for the header
section.
It also fixes a bug where the command handler for the header controller
was not set.

Bug: 753732
Change-Id: I5ffe272f7d1b02223f3e9dac85cad79ae52b61fa
Reviewed-on: https://chromium-review.googlesource.com/607890
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Reviewed-by: Elodie Banel <lod@chromium.org>
Cr-Commit-Position: refs/heads/master@{#492930}
Former-commit-id: 05179d103117b983eaa87585d35943f299c3c3fb