ios/chrome/browser/content_suggestions/content_suggestions_coordinator.mm
@@ -122,6 +122,7 @@ const char kNTPHelpURL[] = "https://support.google.com/chrome/?p=new_tab";
 
   self.headerController = [[ContentSuggestionsHeaderViewController alloc] init];
   self.headerController.dispatcher = self.dispatcher;
+  self.headerController.commandHandler = self;
   self.headerController.delegate = self;
   self.headerController.readingListModel =
       ReadingListModelFactory::GetForBrowserState(self.browserState);
